recursion.hanoi.lessons.recursion.hanoi.SplitHanoi3.scala.error
SplitHanoi3:16: error: ':' expected but ',' found.
def hanoi_fast(height, src, free, full, dst) {
                     ^SplitHanoi3:45: error: identifier expected but '}' found.
}
^